syntax= "proto3";

package simple_bank;

import "user.proto";

option go_package= "simple_bank/proto";

message CreateUserRequest {

    string username= 1;
    string name= 2;
    string email= 3;
    string password= 4;
}

message CreateUserResponse {
    User user= 1;
}